@startuml
class User {
  - int id
  - String email
  - String passwordHash
  - String name
  - List preference
}

class Task {
  - int id
  - String title
  - String status
  - Date deadline
  - int userId
}

class Category {
  - int id
  - String name
}

class ProductivityLog {
  - int id
  - int taskId
  - int timeSpent
  - Date timestamp
}

User "1" -- "*" Task
Task "*" -- "1" Category
Task "1" -- "*" ProductivityLog
@enduml